# irsl_mc_rtc

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.superbuild  README.md  build.sh  build_controller.sh  build_memo.md  entrypoint.sh  exec.sh  run.sh
bwc_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
bwc_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
bwc_ws/devel/.private/baseline_footstep_planner/: .catkin
bwc_ws/devel/.private/baseline_walking_controller/: .catkin
bwc_ws/devel/.private/catkin_tools_prebuild/: .catkin
bwc_ws/devel/.private/centroidal_control_collection/: .catkin  local_setup.sh
bwc_ws/devel/.private/force_control_collection/: .catkin  setup.sh
bwc_ws/devel/.private/nmpc_ddp/: .catkin  .rosinstall  local_setup.sh  setup.sh
bwc_ws/devel/lib/: libBaselineFootstepPlanner.so.0  libBaselineFootstepPlanner.so.0.1.0  libCCC.so.0  libCCC.so.0.2.0  libForceColl.so.0  libForceColl.so.0.2.0
bwc_ws/logs/baseline_footstep_planner/: build.cmake.000.log.stderr  build.cmake.003.log.stderr
bwc_ws/logs/baseline_walking_controller/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.008.log.stderr  build.make.004.log.stderr  build.make.011.log.stderr
bwc_ws/logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
bwc_ws/logs/centroidal_control_collection/: build.cmake.001.log.stderr  build.cmake.005.log.stderr  build.make.002.log.stderr
bwc_ws/logs/force_control_collection/: build.cmake.001.log.stderr  build.cmake.012.log.stderr
bwc_ws/logs/nmpc_ddp/: build.cmake.000.log.stderr  build.cmake.005.log.stderr
bwc_ws/logs/qp_solver_collection/: build.cmake.001.log.stderr  build.cmake.003.log.stderr
bwc_ws/logs/trajectory_collection/: build.cmake.000.log.stderr  build.cmake.003.log.stderr
bwc_ws/src/: .rosinstall  .rosinstall.bak
config/CHIDORI/: BaselineWalkingController.yaml  chidori.yaml  mc_rtc.yaml
config/JVRC1/: mc_rtc.yaml
root/: .bashrc
superbuild_extensions/: CMakeLists.txt  choreonoid.cmake  irsl_mc_rtc_util.cmake  mc-openrtm.cmake  test
userdir/: build_controller.sh  setup.bash  setup_vnoid.bash
userdir/bwc/: BaselineWalkingController.yaml  chidori.yaml  make_bwc.py
userdir/cnoid_spring_customizer/sample/: SpringCustomizerSettings.yaml  make_dynamic_slope.py  make_spring_floor.py  make_spring_floor_.py  make_static_slope.py  make_step_floor.py  step_floor_.body
userdir/vnoid/src/: stabilizer.cpp
(+109 files in other folders)
